PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

- phodevi: Optimization for slightly faster start-up time
- phoromatic: Add WoL details to the maintenace table page
- matisk: Restore the MATISK module for testing  (Jakub Maleszewski)

Phoronix Test Suite 6.2 Milestone 4
26 January 2016

- pts-core: Fix for some test profiles not showing up in list-tests sub-command
- pts-core: Add function for optionally removing unchanged results
- pts-core: Add function for optionally removing noisy results
- pts-core: Rework PDF generation of test results
- phoromatic: Add option to result viewer for exposing possible points of interest
- phoromatic: Add view_results_since support to the export results viewer
- pts_Graph: Fix for graphs sometime not rendering correctly on multi-way comparisons

Phoronix Test Suite 6.2 Milestone 3
7 January 2016

- pts-core: Add system to default list of repositories
- pts-core: Allow result graph footnotes to be added during test time by writing to ~/pts-footnote
- pts-core: Optimize array usage along hot paths
- pts-core: Add httpd as a possible external dependency
- pts_Graph: Rendering fix for collision of result identifiers
- phoromatic: Add LimitNetworkCommunication option
- phoromatic: Fix in listing tests on schedules page when dealing with cache mismatch
- deploy: JuJu update from upstream

Phoronix Test Suite 6.2 Milestone 2
2 January 2016

- pts-core: Add FullOutput configuration option for dumping all pre/post/interim information to standard output
- pts-core: Add MinimalTestTime user configuration option
- phodevi: Software string detection improvements
- phodevi: Support for PTS_NPROC environment variable to override reported CPU core count
- phoromatic: Export viewer tweaks

Phoronix Test Suite 6.2 Milestone 1
15 December 2015

- pts-core: Begin work on dynamic dependency handler infrastructure
- pts-core: Add new TestProfile/SystemDependencies field to test profile specification