@@ -2,6 +2,7 @@ PHORONIX TEST SUITE CHANGE-LOG
 
 Phoronix Test Suite (Git)
 
+- pts-core: Add golang as possible external dependency
 - phodevi: Optimization for slightly faster start-up time
 - phoromatic: Add WoL details to the maintenace table page
 - matisk: Restore the MATISK module for testing  (Jakub Maleszewski)
